Últimas alterações antes da entrega do MAPA

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/CSS/contact.css">
+    <script src="/JS/script.js" defer></script>
 </head>
 
 <!-- Abaixo dá-se início ao corpo do código contendo todas as usas aplicabilidades -->
@@ -35,18 +35,17 @@
                 </div>
             </div>
         </nav>        
-    <div class="logo">
-        <img src="./assets/Logo.svg" alt="Logo da empresa">
+    <div class="logotipo">
+        <img class="logotipo" src="/assets/Logo.svg" alt="Logo da empresa"> 
     </div>
-    <h1 class="title">FALE CONOSCO</h1> <!-- O cliente não forneceu os contatos -->
-
     </header>
 
     <!-- No main são mostrados por escrito os contatos da empresa -->
-    <main>
-        <h3 class="contacts">Número de telefone</h3>
-        <h3 class="contacts">E-mail</h3>
-        <h3 class="contacts">Endereço</h3>
+    <main class="main-contact">
+        <h2 class="title-contact">FALE CONOSCO:</h2>
+        <h3 class="contacts">(+351) 964 503 845</h3>
+        <h3 class="contacts">E-Mail: francistreetunip@gmail.com</h3>
+        <h3 class="contacts">Almada - Portugal</h3>
     </main>
 
     <!-- rodapé -->
