--- a/HTML/form.html
+++ b/HTML/form.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="form.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/form.css">
+    <script src="/JS/script.js" defer></script>
 </head>
 
 <!-- Abaixo dá-se início ao corpo do código contendo todas as usas aplicabilidades -->
@@ -38,7 +38,7 @@
         </nav>  
     </header>
  
-    <main class="main">
+    <main class="main-form">
         <!-- Criação da Ficha de inscrição que terá sua validação através de JavaScript, no Script.js -->
         <div class="box">
             <form class="box-form"  id="box-form">
