salvei 2 pastas que não estavam salvas

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -37,24 +37,14 @@
         </nav>  
     </header>
 
-    <!-- O main está dividido em duas parte através do uso de uma "img" e uma "section", a primeira (img) contém o logo da empresa e a segunda (section), as informações sobre a empresa. A empresa não forneceu essas informações por isso foi feito o uso de "Lorem ipsum" para ter a noção visual -->
+    <!-- O main está dividido em duas parte através do uso de uma "img" e uma "section", a primeira (img) contém o logo da empresa e a segunda (section), as informações sobre a empresa. -->
     <main class="main-about">
         <img class="logotipo" src="/assets/Logo.svg" alt="Logo da empresa">   
 
         <section>
             <p class="main-about-parag">A Francistreet Unipessoal Lda é uma empresa especializada em transporte por aplicação e serviços privados, com foco na excelência, no conforto e na experiência de alto padrão. Atuamos com uma frota de carros de luxo e uma equipa de motoristas profissionais, oferecendo aos nossos clientes um serviço exclusivo, seguro e totalmente personalizado. Nosso compromisso vai além de transportar: proporcionamos experiências memoráveis em cada trajeto, com atendimento diferenciado, pontualidade e total discrição. Trabalhamos com atendimento agendado, ideal para clientes que prezam por organização, tranquilidade e previsibilidade. Atendemos compromissos corporativos, eventos especiais, deslocação executivos e, com destaque, serviços de agendamento turístico.</p>
             <p class="main-about-parag">A Francistreet oferece passeios turísticos planeados sob medida, com roteiros flexíveis, acompanhamento profissional e o conforto que só um transporte de luxo pode proporcionar. Se você deseja explorar cidades, regiões históricas, destinos naturais ou experiências culturais, garantimos que sua viagem será marcada por segurança, elegância e atenção aos mínimos detalhes. Nosso atendimento é personalizado: cada cliente é único, e cada viagem é adaptada às suas preferências e necessidades. Além do transporte turístico e agendado, também atendemos através de apliocaçóes, com a mesma qualidade e eficiência. Nossa frota é composta por veículos de luxo modernos, equipados para oferecer máximo conforto, conectividade e sofisticação, tornando cada viagem uma verdadeira experiência premium.</p>
-            <p class="main-about-parag">A Francistreet Unipessoal Lda nasceu para atender um público exigente, que valoriza o tempo, o conforto e o bom atendimento. Nossa missão é oferecer uma mobilidade elegante, segura e eficiente — seja em viagens de rotina, compromissos profissionais ou passeios inesquecíveis.
-Viajar com a Francistreet é viajar com estilo. Descubra um novo conceito em transporte privado e viva uma experiência de alto nível, do início ao fim.
-</p>
-
-
-
-
-
-
-
-
+            <p class="main-about-parag">A Francistreet Unipessoal Lda nasceu para atender um público exigente, que valoriza o tempo, o conforto e o bom atendimento. Nossa missão é oferecer uma mobilidade elegante, segura e eficiente — seja em viagens de rotina, compromissos profissionais ou passeios inesquecíveis. Viajar com a Francistreet é viajar com estilo. Descubra um novo conceito em transporte privado e viva uma experiência de alto nível, do início ao fim.</p>
         </section>
     </main>
 
