--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a empresa</title>
-    <link rel="stylesheet" href="/CSS/about.css">
-    <script src="/JS/script.js" defer></script>
+    <link rel="stylesheet" href="about.css">
+    <script src="script.js" defer></script>
 </head>
 
 <!-- Abaixo dá-se início ao corpo do código contendo todas as usas aplicabilidades -->
