--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos</title>
-    <link rel="stylesheet" href="/CSS/contact.css">
-    <script src="/JS/script.js" defer></script>
+    <link rel="stylesheet" href="contact.css">
+    <script src="script.js" defer></script>
 </head>
 
 <!-- Abaixo dá-se início ao corpo do código contendo todas as usas aplicabilidades -->
