--- a/form.html
+++ b/form.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="/CSS/form.css">
-    <script src="/JS/script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="form.css">
+    <script src="script.js" defer></script>
 </head>
 
 <!-- Abaixo dá-se início ao corpo do código contendo todas as usas aplicabilidades -->
