--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Francistreet</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/JS/script.js" defer></script>
 </head>
@@ -19,16 +19,16 @@
         <nav class="nav">
             <div class="nav-menu">
                 <div>
-                    <li><a href="/HTML/index.html" style="color: #ffffff;">Início</a></li>
+                    <li><a href="index.html" style="color: #ffffff;">Início</a></li>
                 </div>
                 <div>
-                    <li><a href="/HTML/about.html" style="color: #ffffff;">Sobre</a></li>
+                    <li><a href="about.html" style="color: #ffffff;">Sobre</a></li>
                 </div>
                 <div>
-                     <li><a href="/HTML/contact.html" style="color: #ffffff;">Contatos</a></li>
+                     <li><a href="contact.html" style="color: #ffffff;">Contatos</a></li>
                 </div>
                  <div>
-                     <li><a href="/HTML/form.html" style="color: #ffffff;">Inscrição</a></li>
+                     <li><a href="form.html" style="color: #ffffff;">Inscrição</a></li>
                 </div>
                 <div>
                     <input type="text" id = "campoTexto" placeholder="Pesquise algo ...">
